Phd Proposal Saturday
small changes

--- a/PhDProposal 01/0-Titel/title2.tex
+++ b/PhDProposal 01/0-Titel/title2.tex
@@ -26,9 +26,11 @@
 
 % Title
 
-{ \Huge \bfseries Understanding phytoplankton community shifts in the eastern Cariaco basin, Venezuela}\\[0.4cm]
+{ \Huge \bfseries Modeling diverse phytoplankton communities in the eastern Cariaco basin, Venezuela}\\[0.4cm]
 
-\vspace{3cm}
+{\tiny*prop need broader title here for PhD Project*}
+
+\vspace{2cm}
 % Author and supervisor
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} 
@@ -57,10 +59,32 @@ Prof Dr.~Andrew D. \MakeUppercase{Barton}\\
 
 % Abstract Page
 \large 
-\textbf{ABSTRACT} \\
+\textbf{Abstract} \\
 
 \normalsize
 
-"Totally need to rewrite this:" At an unprecedented rate our oceans are changing and so are the organisms within it. We are struggling to find ways to characterize and quantify the organisms and their interactions in ways that can be effectively utilized in computational models to predict future scenarios. Phytoplankton are an integral part of modeling the biogeochemical interactions taking place in the ocean. One of the key questions is how to accurately describe the interactions and effects on the ecosystem of the remarkably diverse planktonic community. The field of marine biogeochemical modeling has seen great advances in the last 20 years, in particular the “trait-based” approach promises ecologically meaningful descriptions of biodiversity by moving away from treating species explicitly, but instead looking at the way organisms interact with the environment (i.e. their traits). Two such models form the basis for my doctoral studies: The PhytoSFDM model, developed by my supervisor Esteban Acevedo-Trejos, and the DARWIN model, a framework developed at MIT and used extensively by Andrew Barton. 
+At an unprecedented rate our oceans are changing and so are the organisms within it.
+
+- Global Change / Phytoplankton - it's important
+
+- phytoplankton is a complex and diverse community, in a complex ecosystem, trait-based vs functional type
+
+- CARIACO is a setting where both of these things are obviously happening/true and I have the data to backitup
+
+- computational models are the way to synthesisze and test hypotheses about these complex systems
+
+- I have built a modeling framework to test functional type hypothesis, first study looking at bulk biomass changes
+
+- the modelling framework itself is interesting and publishable
+
+- now going to San Diego to work with Andrew Barton on expand upon first study and look at more detailed BDEF and other such stuff
+
+- goal is to improve understanding of ocean ecosystem and how it might be affected by global changes
+
+ 
+
+"Totally need to rewrite this:
+
+ We are struggling to find ways to characterize and quantify the organisms and their interactions in ways that can be effectively utilized in computational models to predict future scenarios. Phytoplankton are an integral part of modeling the biogeochemical interactions taking place in the ocean. One of the key questions is how to accurately describe the interactions and effects on the ecosystem of the remarkably diverse planktonic community. The field of marine biogeochemical modeling has seen great advances in the last 20 years, in particular the “trait-based” approach promises ecologically meaningful descriptions of biodiversity by moving away from treating species explicitly, but instead looking at the way organisms interact with the environment (i.e. their traits). Two such models form the basis for my doctoral studies: The PhytoSFDM model, developed by my supervisor Esteban Acevedo-Trejos, and the DARWIN model, a framework developed at MIT and used extensively by Andrew Barton. 
 
 \end{titlepage}
