--- a/PhDProposal 01/Chp2-Pre/PreResults2.tex
+++ b/PhDProposal 01/Chp2-Pre/PreResults2.tex
@@ -14,6 +14,7 @@ Talk about the data again
 This will be a first! first proper ecological model apart from this Export Flux model only including diatoms \citep{Walsh2002a}
 
 
+FUNCTIONAL TYPES STRUCTURE --> explain linkage between Pigment Data that I use and functional diversity measurements (XMoreno et al. 2012X) take this from Pinckney et al. 2015...
 bb
 
 
