--- a/PhDProposal 01/Chp22-Pre2/PreResults22.tex
+++ b/PhDProposal 01/Chp22-Pre2/PreResults22.tex
@@ -1,4 +1,4 @@
-\chapter{PhytoMFTM - a flexible object-oriented phytoplankton functional-type ecosystem model}
+\chapter{PhytoMFTM - a flexible object-oriented PFT model}
 
 \small {\textbf{}}
 
@@ -48,7 +48,7 @@ XXX
 
 End Methods here
 
-\section{Preliminary Results}
+\section{How to complete this project}
 
 
 Just say that this model was the basis for the previous chapter work, and will be for the rest of my PhD, a toolkit for testing ideas with multiple functional types! go towards selection-based models, like DARWIN
