--- a/PhDProposal 01/Chp3-Further/Further.tex
+++ b/PhDProposal 01/Chp3-Further/Further.tex
@@ -9,20 +9,18 @@
  And then say how the model I am building is actually very well equipped to deal with this kind of 
 
 
-In 2007 \citet{Bruggeman2007} developed a trait model based on DEB concepts to study phytoplankton diversity and succession. The model (\ref{Bruggeman}) captures the seasonal dynamics of the phytoplankton community structure and key process which influence diversity, such as migration. However, they had to face the problem of having to consider too many species (and therefore too many state variables and parameters) when tackling biodiversity studies. \citet{Bruggeman2007}, however, elegantly resolved the problem by approximating the full model with a simpler one. Using a moment closure technique to estimate the few, most important macroscopic properties of the full, complex system, such as total biomass, mean trait value, and trait variance, as previously proposed by \citet{Wirtz1996, Norberg2001}, Bruggeman and Kooijman's(\citeyear{Bruggeman2007}) obtained a simpler model, which dynamics compared remarkably well with the one of the full model. It should be noted, however, that this method assumes a normal distribution of the trait possibly omitting interesting multimodal dynamics \citep{Bruggeman2007}. Following studies refined this approach by providing a complete mechanistic framework for developing these kind of models and by confirming the quality of the approximation in capturing the essential physiological and ecological characteristics of the full model \citep{Merico2009}. 
+XXXXX
 
 \subsection{Method}
-The main focus of my PhD work is to develop a size-based model following the approaches of  \citet{Bruggeman2007, Merico2009} in order to further explore the detailed mechanisms leading to the observed phytoplankton size structure distributions in regions of the Atlantic Ocean of contrasting environmental conditions. The guiding principle for defining the traits and the tradeoffs to be incorporated into my model will be based on the concept that organisms face trade-offs in their ability to allocate limited energy and resources to growth, reproduction and defence, which is central to most theories explaining the diversity of life on Earth \citep{Tilman2000}. Based on available observations, I will therefore develop a trade-off between competitive ability for nutrient acquisition and resistance to grazing (\ref{model}). I will then include a specific grazing pressure that relates to both phyto- and zooplankton mortalities.
+XXXX
 
-The resulting, full size-based model will be approximated with a simpler model of aggregate macroscopic properties using the moment closure approximation proposed by \citet{Wirtz1996, Norberg2001} and further refined by \citet{Bruggeman2007, Merico2009}. The phytoplankton total biomass ($P$), the mean trait ($\bar{s}$), and the trait variance ($v$) will be formulated as follows:
+
+
 
 \section{Relevance}
 Again talk shortly about how biodiversity means ecosystem resilience (kinda) and how climate change and anthropogenic stressors will test, if not break the boundaries of the ecosystem resilience. We are still trying to understand the basic connections between the main organisms and functional types in the ocean. Such that we can only guess at what steady state lies behind the boundary, but perhaps we should better never find out.
 
-\section{Multi-trait size-based model}
 XXXXX
-
-\section{Paleo-reconstruction of planktonic communities}
 
 
 XXXX
