--- a/PhDProposal 01/RepositoryOfStructures.tex
+++ b/PhDProposal 01/RepositoryOfStructures.tex
@@ -127,3 +127,5 @@ Copepods &-0.063 &0.064 &0.520 &0.068 &0.051 &0.567 &-0.004 &0.788 &-0.222\\ \hl
 %%%% typical text %%%%
 
 Smaller phytoplankton cell sizes have a competitive advantage over larger phytoplankton under low nutrient, low light and low grazing pressure \citep{Litchman2008, Litchman2010}. From our regression analyses (Figures \ref{response1} and \ref{response2}) we inferred a strong control of NO$_3^-$+NO$_2^-$ and temperature on all three size fractions. Pico- and nanoplankton size fractions, however, appeared more sensitive to changes in PO$_4^{3-}$, SiO$_4^{2-}$ and copepod abundance. We propose that these effects are caused by a trade-off between resource acquisition and predation pressure, although with the caveat represented by the paucity of the zooplankton data and by the qualitative value we attribute to zooplankton abundance as an indication of grazing pressure. There are a number of important physiological and ecological processes that strongly depend on phytoplankton cell size \citep{Kiorboe1993, Cermeno2008a, Finkel2009a}, including metabolic rates, maximum nutrient uptake rate, nutrient diffusion, light absorption, sinking velocity, trophic interactions and even diversity within taxa, which is often a log-normal distribution of body size. Our results are therefore consistent with this general "size rule" \citep{Finkel2009a}. To our knowledge it is the first time that this feature is observed in data extending across an entire ocean basin and irrespective of temporal changes.
+
+The resulting, full size-based model will be approximated with a simpler model of aggregate macroscopic properties using the moment closure approximation proposed by \citet{Wirtz1996, Norberg2001} and further refined by \citet{Bruggeman2007, Merico2009}. The phytoplankton total biomass ($P$), the mean trait ($\bar{s}$), and the trait variance ($v$) will be formulated as follows:
