--- a/PhDProposal 01/proposal.tex
+++ b/PhDProposal 01/proposal.tex
@@ -63,6 +63,8 @@
 
 %%% END Article customizations
 \renewcommand{\familydefault}{\sfdefault}
+\usepackage[parfill]{parskip}
+\setlength{\parindent}{1em}
 %%% The "real" document content comes below...
 
 %\title{A trait-based modelling approach to phytoplankton community size-structure in the Atlantic Ocean}
